src/snapshots/verver__maven__maven_test__tokenization-2.snap
---
source: src/maven.rs
expression: "get_tokens(\"1.2.3-foo\")"
---
- prefix: Hyphen
  value:
    Number: 1
- prefix: Dot
  value:
    Number: 2
- prefix: Dot
  value:
    Number: 3
- prefix: Hyphen
  value:
    Qualifier: foo

