src/snapshots/verver__maven__maven_test__tokenization-3.snap
---
source: src/maven.rs
expression: "get_tokens(\"m1\")"
---
- prefix: Hyphen
  value:
    Qualifier: milestone
- prefix: Hyphen
  value:
    Number: 1

