src/snapshots/verver__maven__maven_test__tokenization-4.snap
---
source: src/maven.rs
expression: "get_tokens(\"1m\")"
---
- prefix: Hyphen
  value:
    Number: 1
- prefix: Hyphen
  value:
    Qualifier: m

