src/snapshots/verver__maven__maven_test__tokenization-5.snap
---
source: src/maven.rs
expression: "get_tokens(\"0m0\")"
---
- prefix: Hyphen
  value:
    Qualifier: milestone

