src/snapshots/verver__maven__maven_test__tokenization-6.snap
---
source: src/maven.rs
expression: "get_tokens(\"1-1.foo-bar1baz-.1\")"
---
- prefix: Hyphen
  value:
    Number: 1
- prefix: Hyphen
  value:
    Number: 1
- prefix: Dot
  value:
    Qualifier: foo
- prefix: Hyphen
  value:
    Qualifier: bar
- prefix: Hyphen
  value:
    Number: 1
- prefix: Hyphen
  value:
    Qualifier: baz
- prefix: Hyphen
  value:
    Number: 0
- prefix: Dot
  value:
    Number: 1

